[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Portal.gd" type="Script" id=1]
[ext_resource path="res://Sprites/portal_sheet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=41]
radius = 18.0
height = 8.0

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 300, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 400, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 500, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "init",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 300, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 400, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
} ]

[node name="Portal" type="Node2D"]
visible = false
position = Vector2( -967, -496 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 41 )

[node name="InitialEffect" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 54 )
animation = "init"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 60 )
animation = "idle"
playing = true

[connection signal="animation_finished" from="InitialEffect" to="." method="_on_InitialEffect_animation_finished"]
[connection signal="frame_changed" from="InitialEffect" to="." method="_on_InitialEffect_frame_changed"]
